<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
    <item android:title="@string/browse">

        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/moviesViewPagerFragment"
                android:icon="@drawable/ic_movies"
                android:title="@string/movies" />

            <item
                android:id="@+id/tvShowsViewPagerFragment"
                android:icon="@drawable/ic_television"
                android:title="@string/tv_shows" />

                <item
                    android:id="@+id/popularActorsFragment"
                    android:icon="@drawable/ic_person"
                    android:title="@string/actors" />
            </group>
        </menu>
    </item>

    <item android:title="@string/my_account">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/preferencesFragment"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />
            </group>
        </menu>
    </item>

    </group>
</menu>