<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/moviesViewPagerFragment">

    <fragment
        android:id="@+id/moviesViewPagerFragment"
        android:name="com.jonareas.android.popularmovies.view.viewpager.MoviesViewPagerFragment"
        android:label="@string/movies"
        tools:layout="@layout/fragment_home_view_pager" >
        <action
            android:id="@+id/action_to_movie_detail"
            app:destination="@id/movieDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/movieDetailFragment"
        android:name="com.jonareas.android.popularmovies.view.movies.MovieDetailFragment"
        android:label="{title}"
        tools:layout="@layout/fragment_movie_detail" >
        <argument
            android:name="title"
            app:argType="string" />
        <argument
            android:name="movieId"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/preferencesFragment"
        android:name="com.jonareas.android.popularmovies.view.settings.PreferencesFragment"
        android:label="@string/settings" />
    <fragment
        android:id="@+id/tvShowsViewPagerFragment"
        android:name="com.jonareas.android.popularmovies.view.viewpager.TvShowsViewPagerFragment"
        android:label="@string/tv_shows"
        tools:layout="@layout/fragment_home_view_pager"
        />


</navigation>
